# bark-bot

./: README.md  SETUP_GUIDE.md  package.json
bark_bot/: .env  .env.template  Cargo.toml  command.rs  config.toml  db.sqlite
bark_bot/database/: dummy.sql
bark_bot/src/: handlers.rs  main.rs  update_listener.rs
bark_bot/src/actions/: approve_transaction.rs  create_transaction.rs  execute_transaction.rs  mod.rs  reject_transaction.rs
bark_bot/src/collections/: blink_metadata.rs  button_metadata.rs  command.rs  config.rs  handler.rs  mod.rs  transaction.rs  types.rs
bark_bot/src/commands/: cancel.rs  help.rs
bark_bot/src/handlers/: handle_blink_url.rs  handle_external_action.rs  handle_internal_action.rs  handle_parameters.rs
bark_bot/src/instructions/: activate_transaction.rs  add_instruction.rs  approve_transaction.rs  create_transaction.rs  execute_transaction.rs  reject_transaction.rs
bark_bot/src/requests/: create_transaction.rs  get_blink_metadata.rs  get_blink_transaction.rs  get_multisig_account.rs  get_transaction.rs  get_transaction_account.rs  get_transaction_accounts.rs  send_and_confirm_transaction.rs  update_transaction.rs
bark_bot/src/utils/: consts.rs  find_blink_instructions.rs  find_key_indexes.rs  find_unique_account_metas_map.rs  get_group_chat_id.rs  get_instruction_pubkey.rs  get_multisig_authority_pubkey.rs  get_multisig_pubkey.rs  get_program.rs  get_transaction_pubkey.rs  get_url_root.rs  get_user_keypair.rs
bark_bot_api/: Cargo.toml  db.sqlite
bark_bot_api/src/: main.rs
