[package]
name = "bark_bot_api"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros", "redis-storage", "cbor-serializer", "sqlite-storage-nativetls"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.42.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.11", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
url = "2.5.4"
solana-sdk = "2.1.7"
borsh = "1.5.3"
solana-client = "2.1.7"
base64 = "0.22.1"
squads-mpl = "1.3.1"
anchor-lang = "0.30.1"
envconfig = "0.11.0"
anchor-client = "0.30.1"
bincode = "1.3.3"

