[package]
name = "bark_bot_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
